--- a/Breath-main/Breath/index.html
+++ b/Breath-main/Breath/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breath</title>
     <link rel="stylesheet" href="style.css">
-    
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="top" class="container">
@@ -35,8 +35,12 @@
                      comprometendo a saúde física e psicossocial do indivíduo, podendo acometer crianças, adolescentes e adultos.
                      <BR></BR>
                      </p>
+                     <div id="leiamais">
+                        <p>Por serem doenças graves com altos índices de mortalidade, os pacientes devem ser tratados e acompanhados por uma equipe de multiprofissionais, que inclui médicos, psicólogos, enfermeiros e nutricionistas para traçar um melhor planejamento e ter um melhor desfecho clínico.</p>
 
-                    <button onclick="leiaMais" id="vermaisbtn">Leia mais</button>
+                        <a href="" onclick="leiaMenos()"><p>Ocultar</p></a>
+                     </div>
+                    <button onclick="leiaMais()" id="vermaisbtn">Leia mais</button>
             </div>
              <div  class="imgBox">
             <img src="img/world_resized.png" class="saude">
